--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 img.bedroom{
-  width: 800px;
-  height: 500px;
-  margin: 25px 25px 0 250px;
+  width: 900px;
+  height: 600px;
+  margin: 25px auto 0 225px;
   border: 5px solid white;
 }
 
@@ -13,4 +13,11 @@ h1{
   color: white;
   text-align: center;
   font-family: 'MedievalSharp', cursive;
+}
+
+img.house{
+  width: 800px;
+  height: 500px;
+  margin: 25px 25px 0 250px;
+  border: 5px solid white;
 }
